# FSClicker

./: .clang-format  .gitignore  CMakeLists.txt  README.en.md  README.md
docs/: evolution_guide.md  qt_611_migration_notes.md  winget_release_guide.md  work_log.md
include/: app_config.h  clicker_controller.h  event_injector.h  global_definitions.h  keyboard_hook.h
old_code/: CMakeLists.txt
old_code/include/: coordinate_capture_window.h  custom_widget.h  event_injector.h  global_definitions.h  keyboard_hook.h  main_window.h
old_code/resources/: app_resources.qrc
old_code/scripts/: package_app.py
old_code/src/: coordinate_capture_window.cpp  custom_widget.cpp  event_injector.cpp  global_definitions.cpp  keyboard_hook.cpp  main.cpp  main_window.cpp
old_code/ui/: main_window.ui
qml/: Main.qml  main.qml
qml/components/: config_row.qml  nav_button.qml  segment_button.qml  small_action_button.qml  traffic_button.qml
qml/theme/: AtomTheme.qml  atom_theme.qml
resources/: app_icon.rc
scripts/: generate_winget_manifest.py  package_app.py
src/: app_config.cpp  clicker_controller.cpp  event_injector.cpp  global_definitions.cpp  keyboard_hook.cpp  main.cpp
